Thu Jan  6 09:12:31 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* lib/mkmf.rb (configuration): fixing gsub when multiple error flags
	  are passed to GCC.

Thu Jan  6 05:25:49 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_modify): export.

Thu Jan  6 05:14:41 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/stringio/stringio.c (get_strio, strio_set_string)
	  (strio_reopen): check if frozen.  [ruby-core:33648]

Thu Jan  6 05:10:58 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_resize): new utility function.  [ruby-dev:42912]

Thu Jan  6 05:03:26 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dln.c (init_funcname_len): ignore rest from first dot.
	  [ruby-dev:41774]

Thu Jan  6 02:55:48 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/yaml_tree.rb: use YAML 1.0 output
	  format for serializing nil values.  Thanks Eric Hodel!

	* test/psych/test_nil.rb: test for nil values

Wed Jan  5 14:21:34 2011  Mark Dodwell  <hi@mkdynamic.co.uk>

	* string.c: fix rdoc typo.
	  https://github.com/shyouhei/ruby/pull/3

Wed Jan  5 14:06:01 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/rdoc/test_rdoc_options.rb (TestRDocOptions#test_check_files):
	  skip on Windows because chmod 0 doesn't mean unreadable by owner.

Wed Jan  5 13:56:54 2011  Akinori MUSHA  <knu@iDaemons.org>

	* lib/net/http.rb (Net::HTTP#get): A header hash given should not
	  be modified.

Wed Jan  5 13:56:03 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/openssl/ossl_ssl.c: SSL_shutdown should be called until the
	  return value is non-zero:
	  http://www.openssl.org/docs/ssl/SSL_shutdown.html

Wed Jan  5 12:10:08 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/dl/{cfunc.c,dl.h,handle.c}, ext/fiddle/fiddle.{h,c}: Use _WIN32
	  rather than checking for windows.h.  Thanks Jon Forums!
	  [ruby-core:33977]

Sat Jan  1 17:02:50 2011  Yuki Sonoda (Yugui)  <yugui@yugui.jp>
